# decapod-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
docs/: all.html  index.html  sidebar-items.js
docs/endreason/: enum.EndReason.html  index.html
docs/error/: enum.Error.html  index.html  type.Result.html
docs/fileinfo/: index.html  sidebar-items.js  struct.FileInfo.html
docs/read/: struct.Calibration.html  struct.Read.html
docs/readbatch/: struct.BatchRecord.html  struct.BatchRecordIter.html
docs/reader/: index.html  sidebar-items.js  struct.BatchRecord.html  struct.BatchRecordIter.html  struct.Calibration.html  struct.Read.html  struct.Reader.html  struct.ReaderOptions.html  struct.Reads.html
docs/reads/: struct.Reads.html
docs/runinfo/: index.html  sidebar-items.js  struct.KeyValueData.html  struct.RunInfo.html  struct.RunInfoIter.html
example/: Cargo.toml
example/src/: main.rs
src/: bindings.rs  endreason.rs  error.rs  ffi.rs  fileinfo.rs  lib.rs  main.rs  pod5_ffi.rs  read.rs  readbatch.rs  reader.rs  reads.rs  runinfo.rs
