[package]
name = "decapod"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.70.1"

[dependencies]
arrow = { version = "53.3.0", default-features = false, features = ["arrow-ipc", "ipc"] }
serde = { version = "1.0.215", optional = true, features = ["derive"] }
thiserror = "2.0.3"
uuid = "1.11.0"

[features]
serde = ["dep:serde", "uuid/serde"]

[lib]
name = "decapod"
path = "src/lib.rs"
