[package]
name = "decapod"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "rust bindings for the pod5-file-format library"
readme = "README.md"
keywords = ["nanopore", "sequencing", "bioinformatics"]
authors = ["Eilidh Ward"]
repository = "https://github.com/aylz83/decapod-rs/"
documentation = ""
categories = ["science", "filesystem"]

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"

[dependencies]
arrow = { version = "53.3.0", default-features = false, features = ["arrow-ipc", "ipc"] }
ignore = { version = "0.4.23", optional = true }
indexmap = "2.6.0"
polars = { version = "0.43", default-features = false, optional = true, features = ["fmt"] }
serde = { version = "1.0.215", optional = true, features = ["derive"] }
thiserror = "2.0.3"
uuid = "1.11.0"

[features]
serde = ["dep:serde", "uuid/serde"]
polars = ["dep:polars"]
recursive = ["dep:ignore"]
